remove internal about page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         if(document.referrer.length) {
             history.back();
         }
-        window.location.href = '/about';
+        window.location.href = 'https://github.com/EDDYMENS/markdown-external-link-opener/blob/main/README.md';
     }
     // open defined link in a new tab
     window.open(params.to, '_blank');
