open link in new tab

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a onclick='history.back()' target='_blank' href="#" id='external-link'><span id="altText">Click here to visit
                 the page...</span></a>
                 <div>
-                    <a id="link-display" onclick='history.back()' href="#">Link here</a>
+                    <a id="link-display" onclick='history.back()' target="_blank" href="#">Link here</a>
                 </div>
     </div>
 </body>
